<resources>
    <string name="app_name">ReviewerJAVA</string>
    <string name="reviewMaker"></string>
    <string name="enterText">Введите текст</string>
    <string name="enterTitle">Введите загаловок отзыва</string>
    <string name="createReview">Создать</string>
    <string name="logInTitle"></string>
    <string name="nextParagraph">Следующий пункт</string>
    <string name="paragraphTitle">Введите название пункта</string>
    <string name="reviewBlock"></string>
    <string name="profile"></string>
    <string name="userBanRequestView"></string>
    <string name="roleChangerView"></string>
    <string name="makeModer">Сделать модератором</string>
    <string name="makeRegular">Сделать обычным</string>
    <!-- Strings related to signIn -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="block">Заблокировать</string>
    <string name="reject">Отклонить</string>
    <string name="signIn">Регистрация</string>
    <string name="RoleChanger">Назначить роли</string>
    <string name="logOut">Выйти</string>
    <string name="signUp">РЕГИСТРАЦИЯ</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="city">Город</string>
    <string name="report">Пожаловаться</string>
    <string name="ban">Бан</string>
    <string name="user">юзер</string>
    <string name="moder">модер</string>
    <string name="vkAuth">Через VK</string>
</resources>