<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/roleChanger"
        android:title="@string/RoleChanger"
        android:icon="@drawable/ic_change_role"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/reviewBlockView"
        android:title="@string/reviewBlock"
        android:icon="@drawable/ic_review_block"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/home"
        android:title="@string/userBanRequestView"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/reviewMaker"
        android:title="@string/reviewMaker"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add"
        android:visible="false"/>
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_person" />
</menu>