<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/padding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/paragraphTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/paragraphTitle"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/paragraphText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/enterText"
            android:inputType="textMultiLine" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <Button
            android:id="@+id/nextParagraphBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/nextParagraph" />

    </LinearLayout>
</androidx.cardview.widget.CardView>